--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
   </head>
   <body>
     <section id="landing">
-      <h1>Explore sem limites</h1>
-      <p>Porque o aprendizado é contínuo</p>
+      <img src="./images/astronaut.png" alt="astronaut" />
       <div>
-        <img src="./images/down-arrow.svg" />
+        <span>
+          <h1>Explore sem limites</h1>
+          <p>Porque o aprendizado é contínuo</p>
+        </span>
+        <div class="btn-more">
+          <img src="./images/down-arrow.svg" alt="down arrow" />
+        </div>
       </div>
     </section>
     <section id="details">
       <article>
-        <img src="./images/planet1.png" />
+        <img src="./images/planet1.png" alt="yellow planet" />
         <h3>Não pare nunca</h3>
         <p>
           Se você deseja ter sucesso nos estudos, é fundamental que você adote
@@ -26,7 +31,7 @@
         </p>
       </article>
       <article>
-        <img src="./images/planet2.png" />]
+        <img src="./images/planet2.png" alt="blue planet" />
         <h3>Só volta</h3>
         <p>
           Se você parou ou perdeu o ritmo em alguma atividade ou projeto, saiba
@@ -35,7 +40,7 @@
         </p>
       </article>
       <article>
-        <img src="./images/planet3.png" />
+        <img src="./images/planet3.png" alt="green planet" />
         <h3>Siga seu ritmo</h3>
         <p>
           Avançar pouco a pouco mantém progresso constante em objetivos,
